# auto-diff

tensorboard-rs/: Cargo.toml
tensorboard-rs/examples/: draw_graph.rs  draw_histo.rs  draw_hparams.rs  draw_image.rs  draw_scalar.rs
tensorboard-rs/src/: event_file_writer.rs  hparams.rs  lib.rs  masked_crc32c.rs  record_writer.rs  status.rs  summary.rs  summary_writer.rs
