[package]
name = "tensorboard-rs"
version = "0.5.9"
authors = ["yguan <yguan@example.com>"]
edition = "2021"
description = """
Write data for Tensorboard from Rust.


"""
documentation = "https://docs.rs/tensorboard-rs"
homepage = "https://github.com/pipehappy1/auto-diff"
repository = "https://github.com/pipehappy1/auto-diff"
readme = "README.md"
license = "MIT"
keywords = ["machine-learning", "neural-network", "deep-learning"]
exclude = ["/dev/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "2.14"

#tensorboard-proto = { path = "../../tensorboard-proto", version = "0.5.9" }
tensorboard-proto = { version = "0.5.7" }

gethostname = "0.2.1"

image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
hex = "0.4.3"
sha2 = "0.10"

[dev-dependencies]
#protobuf-codegen = "2.14"


[features]

